--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
+lib_deps =
+  MQTT
+  ArduinoJson
+upload_protocol = espota
+upload_port = 192.168.1.211
