--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,6 @@ framework = arduino
 lib_deps =
   MQTT
   ArduinoJson
+  92        ; Rusu's RFM69 lib
 upload_protocol = espota
 upload_port = 192.168.1.211
