--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,5 @@ framework = arduino
 lib_deps =
   PubSubClient
   ArduinoJson@~5.6,!=5.4
-upload_protocol = espota
-upload_port = 192.168.1.211
+;upload_protocol = espota
+;upload_port = 192.168.1.211
