--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 lib_deps =
-  PubSubClient
-  ArduinoJson@~5.6,!=5.4
+  MQTT
+  ArduinoJson@>=6.11.3
 ;upload_protocol = espota
 ;upload_port = 192.168.1.211
