--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 [env:d1_mini_lite]
 platform = espressif8266
 board = d1_mini_lite
+upload_port = /dev/ttyUSB1
 framework = arduino
 lib_deps =
   MQTT
