--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,11 @@
 [env:d1_mini_lite]
 platform = espressif8266
 board = d1_mini_lite
-upload_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
 framework = arduino
 lib_deps =
   MQTT
   ArduinoJson@>=6.11.3
+  Ticker
 ;upload_protocol = espota
 ;upload_port = 192.168.1.211
