--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,6 @@
 [env:d1_mini_lite]
 platform = espressif8266
 board = d1_mini_lite
-upload_port = /dev/ttyUSB0
 framework = arduino
 lib_deps =
   MQTT
@@ -18,3 +17,7 @@ lib_deps =
   Ticker
 ;upload_protocol = espota
 ;upload_port = 192.168.1.211
+; Serial Monitor options
+monitor_speed = 115200
+build_flags = -DMQTT_MAX_PACKET_SIZE=512
+
