--- a/include/settings.example
+++ b/include/settings.example
@@ -22,7 +22,7 @@
 
   #define APPNAME "EspSparsnasGateway"
   #define NTPSERVERNAME "pool.ntp.org"
-  #define LOCALTZ "Etc/GMT-2"
+  #define LOCALTZ "CET-1CEST,M3.5.0,M10.5.0/3"
   #define SERIALSPEED 115200
 
   #define RED_LED D0
