--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 lib_deps =
-  MQTT
+  PubSubClient
   ArduinoJson@>=6.11.3
   Ticker
 ;upload_protocol = espota
