--- a/include/settings.example
+++ b/include/settings.example
@@ -1,7 +1,12 @@
 
 #ifndef SETTINGS_H
 #define SETTINGS_H
-  #define DEBUG 1
+  /*
+   Uncomment the next line to enable debug mode.
+   This gives much more info about what's happening
+   to the serial port.
+  */
+  //#define DEBUG 1
 
   // Set this to the value of your energy meter
   #define PULSES_PER_KWH 1000
@@ -24,7 +29,7 @@
   #define LOCALTZ "Etc/GMT-2"
   #define SERIALSPEED 115200
 
-  #define red_led D0
-  #define green_led D3
-  #define blue_led D2
+  #define LED_RED D0
+  #define LED_GREEN D3
+  #define LED_BLUE D2
 #endif
