--- a/include/settings.example
+++ b/include/settings.example
@@ -2,7 +2,7 @@
 #ifndef SETTINGS_H
 #define SETTINGS_H
 
-  #define DEBUG 1
+//#define DEBUG 1
 
   // Set this to the value of your energy meter
   #define PULSES_PER_KWH 1000
