.piolibdeps removed. Removed multiple _interruptNum definitions. Moved MQTT topic settings.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,14 +10,14 @@
 [env:d1_mini_lite]
 platform = espressif8266
 board = d1_mini_lite
-upload_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
 framework = arduino
 lib_deps =
   PubSubClient
   ArduinoJson@>=6.11.3
   Ticker
-;upload_protocol = espota
-;upload_port = 192.168.1.211
+#upload_protocol = espota
+#upload_port = 192.168.1.165
 ; Serial Monitor options
 monitor_speed = 115200
 build_flags = -DMQTT_MAX_PACKET_SIZE=256
