--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,21 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+upload_port = /dev/ttyUSB0
+framework = arduino
+lib_deps =
+  PubSubClient
+  ArduinoJson@>=6.11.3
+  Ticker
+#upload_protocol = espota
+#upload_port = 192.168.1.165
+; Serial Monitor options
+monitor_speed = 115200
+build_flags = -DMQTT_MAX_PACKET_SIZE=256
+
 [env:d1_mini_lite]
 platform = espressif8266
 board = d1_mini_lite
