--- a/platformio.ini
+++ b/platformio.ini
@@ -7,15 +7,16 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [env:d1_mini_lite]
-platform = espressif8266
+platform = espressif8266@^2.6
 board = d1_mini_lite
 upload_port = /dev/ttyUSB0
 framework = arduino
-lib_deps =
-  PubSubClient
+lib_deps = 
+  PubSubClient@^2.8.0
   ArduinoJson@>=6.11.3
-  Ticker
+  Ticker @ ^1.0
 #upload_protocol = espota
 #upload_port = 192.168.1.165
 ; Serial Monitor options
